@@ -30,18 +30,27 @@ namespace MCForge
 
         public override void Use(Player p, string message)
         {
-            if (message.Split(' ').Length < 2) { Help(p); return; }
-            Player who = Player.Find(message.Split(' ')[0]);
-            Group newRank = Group.Find(message.Split(' ')[1]);
-            string msgGave;
+            var split = message.Split(' ');
+            if (split.Length < 2) { Help(p); return; }
+            Player who = Player.Find(split[0]);
+            Group newRank = Group.Find(split[1]);
+            string msgGave = "";
 
-            if (message.Split(' ').Length > 2) msgGave = message.Substring(message.IndexOf(' ', message.IndexOf(' ') + 1)); else msgGave = "Congratulations!";
+            bool silent = false;
+            if (split[2] == "#")
+            {
+                silent = true;
+                Player.SendMessage(p, "Counducting a stealth promotion");
+            }
+            
+
+            if (split.Length > 2 && silent == false) msgGave = message.Substring(message.IndexOf(' ', message.IndexOf(' ') + 1)); else msgGave = "Congratulations!";
             if (newRank == null) { Player.SendMessage(p, "Could not find specified rank."); return; }
 
             Group bannedGroup = Group.findPerm(LevelPermission.Banned);
             if (who == null)
             {
-                string foundName = message.Split(' ')[0];
+                string foundName = split[0];
                 if (Group.findPlayerGroup(foundName) == bannedGroup || newRank == bannedGroup)
                 {
                     Player.SendMessage(p, "Cannot change the rank to or from \"" + bannedGroup.name + "\".");
@@ -91,12 +100,18 @@ namespace MCForge
                 newRank.playerList.Add(who.name);
                 newRank.playerList.Save();
 
-                Player.GlobalChat(who, who.color + who.name + Server.DefaultColor + "'s rank was set to " + newRank.color + newRank.name, false);
-                Player.GlobalChat(null, "&6" + msgGave, false);
+                if (silent == false)
+                {
+                    Player.GlobalChat(who, who.color + who.name + Server.DefaultColor + "'s rank was set to " + newRank.color + newRank.name, false);
+                    Player.GlobalChat(null, "&6" + msgGave, false);
+                }
                 who.group = newRank;
                 who.color = who.group.color;
                 Player.GlobalDie(who, false);
-                who.SendMessage("You are now ranked " + newRank.color + newRank.name + Server.DefaultColor + ", type /help for your new set of commands.");
+                if (silent == false)
+                {
+                    who.SendMessage("You are now ranked " + newRank.color + newRank.name + Server.DefaultColor + ", type /help for your new set of commands.");
+                }
                 Player.GlobalSpawn(who, who.pos[0], who.pos[1], who.pos[2], who.rot[0], who.rot[1], false);
             }
         }
@@ -104,6 +119,7 @@ namespace MCForge
         {
             Player.SendMessage(p, "/setrank <player> <rank> <yay> - Sets or returns a players rank.");
             Player.SendMessage(p, "You may use /rank as a shortcut");
+            Player.SendMessage(p, "Adding # at the end of the name will do the promotion silently.");
             Player.SendMessage(p, "Valid Ranks are: " + Group.concatList(true, true));
             Player.SendMessage(p, "<yay> is a celebratory message");
         }
